# melomatrices

./: LICENSE  pyproject.toml
melomatrices/: argparser.py  main.py  melomatrix.py  midifile.py  note.py  track.py
