[tool.poetry]
name = "melomatrices"
version = "0.1.0"
description = ""
authors = ["Albert Ayvazyan <albert.avz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.2.10"
matplotlib = "^3.4.2"
mypy = "^0.902"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
